objects/Winery_Guest_House__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_House_Name__c</fullName>
        <label>Guest House Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_House_Notes__c</fullName>
        <label>Guest House Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lodging_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lodging Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Winery_Guest_Houses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <label>Number of Bedrooms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_King_Beds__c</fullName>
        <label>Number of King Beds</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Queen_Beds__c</fullName>
        <label>Number of Queen Beds</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Winery_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winery_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winery</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Winery Guest Houses</relationshipLabel>
        <relationshipName>Winery_Guest_Houses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Winery Guest House</label>
    <nameField>
        <displayFormat>WGH-{0}</displayFormat>
        <label>Winery Guest House</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Winery Guest Houses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>